Allow filtering communities by you_are_moderator
